--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BEAST BOY Graphics</title>
+    <title>NOX CRU Graphics</title>
     <style>
         body {
             margin: 0;
@@ -62,7 +62,7 @@
 <body>
 
 <header>
-    <h1>BEAST BOY Chrome Text Designs</h1>
+    <h1>NOX CRU Chrome Text Designs</h1>
     <p>Custom Chrome & 3D Graphic Text Designs</p>
     <a class="btn" href="https://instagram.com/YOURUSERNAME" target="_blank">DM Me on Instagram</a>
 </header>
@@ -77,7 +77,7 @@
 </div>
 
 <footer>
-    <p>© 2026 BEAST BOY Graphics | All Rights Reserved</p>
+    <p>© 2026 NOX CRU Graphics | All Rights Reserved</p>
 </footer>
 
 </body>
