--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="section">
     <h2>My Work</h2>
     <div class="gallery">
-        <img src="https://via.placeholder.com/250" alt="Design 1">
+        <img src="file_0000000097fc71fa8252d7a992fe6cd7.png" alt="Design 1">
         <img src="https://via.placeholder.com/250" alt="Design 2">
         <img src="https://via.placeholder.com/250" alt="Design 3">
     </div>
