--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <h2>My Work</h2>
     <div class="gallery">
         <img src="file_0000000097fc71fa8252d7a992fe6cd7.png" alt="Design 1">
-        <img src="https://via.placeholder.com/250" alt="Design 2">
-        <img src="https://via.placeholder.com/250" alt="Design 3">
+        <img src="file_00000000a5b87206b96d571906f84d41.png" alt="Design 2">
+        <img src="Picsart_26-02-17_22-05-25-752.png" alt="Design 3">
     </div>
 </div>
 
