--- a/index.html
+++ b/index.html
@@ -1,84 +1,185 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>NOX CRU Graphics</title>
+    <title>NOX CRU | Luxury Chrome Designer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
+
     <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #000000, #1a1a1a);
-            color: white;
-            text-align: center;
+        *{
+            margin:0;
+            padding:0;
+            box-sizing:border-box;
+            font-family:'Poppins', sans-serif;
         }
 
-        header {
-            padding: 50px 20px;
+        body{
+            background: radial-gradient(circle at top, #1a1a1a, #000000);
+            color:white;
+            overflow-x:hidden;
         }
 
-        h1 {
-            font-size: 50px;
-            background: linear-gradient(90deg, silver, white, silver);
-            -webkit-background-clip: text;
-            color: transparent;
+        header{
+            height:100vh;
+            display:flex;
+            flex-direction:column;
+            justify-content:center;
+            align-items:center;
+            text-align:center;
+            padding:20px;
         }
 
-        .section {
-            padding: 40px 20px;
+        h1{
+            font-size:65px;
+            font-weight:800;
+            background:linear-gradient(90deg,#c0c0c0,#ffffff,#c0c0c0);
+            -webkit-background-clip:text;
+            color:transparent;
+            animation:glow 3s infinite alternate;
         }
 
-        .gallery img {
-            width: 250px;
-            margin: 15px;
-            border-radius: 15px;
-            transition: 0.3s;
+        @keyframes glow{
+            from{ text-shadow:0 0 10px #aaa; }
+            to{ text-shadow:0 0 30px #ffffff; }
         }
 
-        .gallery img:hover {
-            transform: scale(1.1);
+        .tagline{
+            margin-top:20px;
+            max-width:600px;
+            opacity:0.8;
+            font-size:18px;
         }
 
-        .btn {
-            display: inline-block;
-            padding: 15px 30px;
-            background: silver;
-            color: black;
-            text-decoration: none;
-            border-radius: 30px;
-            font-weight: bold;
-            margin-top: 20px;
+        .buttons{
+            margin-top:35px;
         }
 
-        .btn:hover {
-            background: white;
+        .btn{
+            padding:14px 35px;
+            border-radius:50px;
+            text-decoration:none;
+            font-weight:600;
+            margin:10px;
+            transition:0.3s;
+            display:inline-block;
         }
 
-        footer {
-            margin-top: 50px;
-            padding: 20px;
-            background: #111;
+        .insta{
+            background:linear-gradient(90deg,#c0c0c0,#ffffff);
+            color:black;
+        }
+
+        .whatsapp{
+            background:#25D366;
+            color:white;
+        }
+
+        .btn:hover{
+            transform:scale(1.1);
+            box-shadow:0 0 20px silver;
+        }
+
+        section{
+            padding:80px 20px;
+            text-align:center;
+        }
+
+        h2{
+            font-size:40px;
+            margin-bottom:50px;
+            opacity:0;
+            transform:translateY(40px);
+            transition:1s;
+        }
+
+        .gallery{
+            display:flex;
+            flex-wrap:wrap;
+            justify-content:center;
+        }
+
+        .gallery img{
+            width:280px;
+            margin:15px;
+            border-radius:20px;
+            transition:0.4s;
+            box-shadow:0 0 15px #111;
+            opacity:0;
+            transform:translateY(40px);
+        }
+
+        .gallery img:hover{
+            transform:scale(1.1);
+            box-shadow:0 0 25px silver;
+        }
+
+        footer{
+            padding:30px;
+            background:#0a0a0a;
+            text-align:center;
+            opacity:0.6;
+        }
+
+        /* Scroll animation active class */
+        .show{
+            opacity:1 !important;
+            transform:translateY(0) !important;
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>NOX CRU Chrome Text Designs</h1>
-    <p>Custom Chrome & 3D Graphic Text Designs</p>
-    <a class="btn" href="https://instagram.com/YOURUSERNAME" target="_blank">DM Me on Instagram</a>
+    <h1>NOX CRU</h1>
+
+    <p class="tagline">
+        Premium Chrome & 3D Typography Designer crafting bold metallic text
+        visuals for gamers, brands & creators worldwide.
+        I turn names into power.
+    </p>
+
+    <div class="buttons">
+        <a class="btn insta" href="https://instagram.com/noxcru" target="_blank">
+            DM on Instagram
+        </a>
+
+        <a class="btn whatsapp" href="https://wa.me/917559964232" target="_blank">
+            Order on WhatsApp
+        </a>
+    </div>
 </header>
 
-<div class="section">
-    <h2>My Work</h2>
+<section>
+    <h2 class="reveal">My Chrome Collection</h2>
+
     <div class="gallery">
-        <img src="file_0000000097fc71fa8252d7a992fe6cd7.png" alt="Design 1">
-        <img src="file_00000000a5b87206b96d571906f84d41.png" alt="Design 2">
-        <img src="Picsart_26-02-17_22-05-25-752.png" alt="Design 3">
+        <img class="reveal" src="file_0000000097fc71fa8252d7a992fe6cd7.png">
+        <img class="reveal" src="file_00000000a5b87206b96d571906f84d41.png">
+        <img class="reveal" src="Picsart_26-02-17_22-05-25-752.png">
     </div>
-</div>
+</section>
 
 <footer>
-    <p>© 2026 NOX CRU Graphics | All Rights Reserved</p>
+    © 2026 NOX CRU | Luxury Chrome Typography
 </footer>
+
+<script>
+    // Scroll reveal animation
+    const reveals = document.querySelectorAll(".reveal");
+
+    window.addEventListener("scroll", () => {
+        reveals.forEach(element => {
+            const windowHeight = window.innerHeight;
+            const elementTop = element.getBoundingClientRect().top;
+
+            if(elementTop < windowHeight - 100){
+                element.classList.add("show");
+            }
+        });
+    });
+</script>
 
 </body>
 </html>
