--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@ DM On Instagram
 <div class="card">
 <img src="file_00000000a50c71fa8b393e3d16b350b2.png">
 </div>
+  
+  <div class="card">
+<img src="Picsart_26-02-17_22-05-25-752.png">
+</div>
 </div>
 </section>
 
