--- a/index.html
+++ b/index.html
@@ -190,8 +190,16 @@ DM On Instagram
 <img src="file_00000000a50c71fa8b393e3d16b350b2.png">
 </div>
   
-  <div class="card">
+<div class="card">
 <img src="Picsart_26-02-17_22-05-25-752.png">
+</div>
+  
+<div class="card">
+<img src="file_00000000ab2071fa84ec9d27e1e6a4f5.png">
+</div>
+  
+  <div class="card">
+<img src="file_00000000ea307209a29ae82c194d611d.png">
 </div>
 </div>
 </section>
